--- a/main.tex
+++ b/main.tex
@@ -29,7 +29,6 @@ twoside
 
 % فایل commands.tex را مطالعه کنید؛ چون دستورات مربوط به فراخوانی بسته‌ها، فونت و دستورات خاص در این فایل قرار دارد.
 \input{./tex/commands}
-
 % مشخصات پایان‌نامه را در فایلهای faTitle و enTitle وارد نمایید.
 \input{./tex/faTitle}
 % مشخصات انگلیسی پایان‌نامه
@@ -61,7 +60,7 @@ twoside
 {
 \small
 \onehalfspacing
-\bibliographystyle{ieeetr-fa} % or plainnat-fa for author-date
+\bibliographystyle{unsrt-fa} % or plainnat-fa for author-date
 \bibliography{./tex/MyReferences}
 }
 
