--- a/tex/chapter1.tex
+++ b/tex/chapter1.tex
@@ -43,7 +43,7 @@
 
 \begin{figure}[ht]
 	\centerline{\includegraphics[width=0.8\textwidth]{sample_action_m1}}
-	\caption{\hl{چندین نمونه از تصاویر فعالیت انسان}
+	\caption{چندین نمونه از تصاویر فعالیت انسان
 		\cite{tasvirAvalChapterYek}
 	}
 	\label{fig:humanActionM1}
@@ -102,7 +102,7 @@
 
 در نهایت، تحلیل موقعیت بدنی، با ترکیب اطلاعات مکانی و حرکات اجزاء بدن، به شبکه‌های عصبی عمیق این امکان را می‌دهد تا با دقت بیشتری اقدام به تشخیص فعالیت‌های انسانی در یک تصویر نماید. این تحلیل نه تنها به ارتقاء دقت تشخیص بلکه به بهبود درک از رفتار انسان و نقش آن در تصویر کمک می‌کند.
 \section{تحلیل اشیاء مرتبط با انسان در تشخیص فعالیت انسان}
-تحلیل اشیاء مرتبط با انسان در تصاویر اطلاعات مهمی را در ارتباط با نوع فعالیت و تعامل انسان با محیط اطراف ارائه می‌دهد. این تحلیل با بررسی نوع و ویژگی‌های اشیاء، امکان تفسیر دقیق‌تر و سودمندتری از فعالیت انجام درحال انجام‌ را فراهم می‌کند. برای مثال، ویژگی‌های یک لیوان در دست انسان می‌تواند نشان‌دهنده فعالیت نوشیدن باشد، در حالی‌که حضور یک دستگاه ورزشی نشان‌دهنده فعالیت ورزشی می‌باشد.
+تحلیل اشیاء مرتبط با انسان در تصاویر اطلاعات مهمی را در ارتباط با نوع فعالیت و تعامل انسان با محیط اطراف ارائه می‌دهد. این تحلیل با بررسی نوع و ویژگی‌های اشیاء، امکان تفسیر دقیق‌تر و سودمندتری از فعالیت درحال‌ انجام را فراهم می‌کند. برای مثال، ویژگی‌های یک لیوان در دست انسان می‌تواند نشان‌دهنده فعالیت نوشیدن باشد، در حالی‌که حضور یک دستگاه ورزشی نشان‌دهنده فعالیت ورزشی می‌باشد.
 \subsection{تحلیل مکان قرارگیری اشیاء}
 ارتباط مکانی اشیاء با انسان نقش اساسی در تعیین تفاوت‌ها و ارتباطات بین انسان و محیط دارد. بررسی مکان وضعیت اشیاء می‌تواند نشان‌دهنده تفصیلاتی از تعاملات و ارتباطات آنها با محیط باشد. به عنوان مثال، حضور یک شال در دست انسان ممکن است نشانگر فعالیتی خاص باشد، مانند خروج در هوای سرد.
 \subsection{تمایز بین اشیاء مختلف}
@@ -137,15 +137,13 @@
 \begin{itemize}
 	\item
 	حال ترکیب سه عامل موقعیت بدنی، اشیاء مرتبط با انسان و ژست به ما این امکان را می‌دهد تا یک تحلیل جامع از فعالیت انسانی داشته باشیم. برای مثال اگر شخصی با یک لیوان در دست، در موقعیت بدنی که نشانگر نشستن است و با ژستی که به حرکات آرامشی اشاره دارد، را مشاهده کنیم، می‌توانیم به احتمال زیاد نتیجه بگیریم که او در حال نشسته و در حال لذت بردن از یک نوشیدنی است. این ترکیب اطلاعات از موقعیت بدنی، اشیاء مرتبط با انسان و ژست به ما اطلاعات دقیق‌تر و گسترده‌تری از فعالیت انسانی ارائه می‌دهد. 
-\hl{تصویر}
 \ref{fig:human_three_amel_mog}
-\hl{دو نمونه از ارتباط موقعیت بدنی، اشیاء مرتبط و ژست را در فهم فعالیتی که در حال انجام است، نشان می‌دهد. در تصویر سمت  راست"لپ تاپ" و "موس" به عنوان اشیاء، "طرز نشستن افراد" به عنوان ژست و کل ناحیه بدن شخص به عنوان یک موقعیت بدنی نشان می‌دهد که درحال کار با لپ تاپ هستند. در تصویر سمت چپ نیز "لیوان" در تشخیص فعالیت "نوشیدن" و طرز نگه داشتن لیوان در دست نشان می‌دهد که فقط لیوان در دست دارند و درحالی نوشیدن نیستند. پس ژست در اینجا یک عامل کمک کننده است.}
+دو نمونه از ارتباط موقعیت بدنی، اشیاء مرتبط و ژست را در فهم فعالیتی که در حال انجام است، نشان می‌دهد. در تصویر سمت  راست"لپ تاپ" و "موس" به عنوان اشیاء، "طرز نشستن افراد" به عنوان ژست و کل ناحیه بدن شخص به عنوان یک موقعیت بدنی نشان می‌دهد که درحال کار با لپ تاپ هستند. در تصویر سمت چپ نیز "لیوان" در تشخیص فعالیت "نوشیدن" و طرز نگه داشتن لیوان در دست نشان می‌دهد که فقط لیوان در دست دارند و درحالی نوشیدن نیستند. پس ژست در اینجا یک عامل کمک کننده است.
 \end{itemize}
 \vspace{8pt}
 \begin{figure}[ht]
 	\centerline{\includegraphics[width=0.8\textwidth]{human_three_amel_mog}}
-	\caption{
-		\hl{دو نمونه تصویر از تأثیر سه عامل ژست، اشیاء و موقعیت انسان در درک فعالیت}
+	\caption{دو نمونه تصویر از تأثیر سه عامل ژست، اشیاء و موقعیت انسان در درک فعالیت
 		\cite{tasvirSevomChapterYek}
 	}ُ
 	\label{fig:human_three_amel_mog}
@@ -166,15 +164,11 @@
 به عنوان مثال، در تشخیص فعالیت انسان در تصاویر، این شبکه‌ها می‌توانند به طور خودکار اجزای مرتبط با افراد، اشیاء، حرکات، و موقعیت‌های مکانی را تشخیص داده و اطلاعات بهتری برای تصمیم‌گیری در مورد نوع فعالیت انسانی فراهم کنند.
 استفاده از شبکه‌های عصبی عمیق در این حوزه امکانات جدیدی را برای تحقیقات و کاربردهای عملی فراهم کرده و می‌تواند بهبود قابل توجهی در دقت و کارایی مدل‌ها برای تشخیص فعالیت انسان در تک تصویر داشته باشد. شکل %
 \ref{fig:neural_network_action_first}
-\hl{
 یک نمونه از چارچوب شبکه عصبی عمیق برای تشخیص فعالیت انسان است. البته دراینجا ورودی چندین سیگنال از فعالیت‌های مختلف است که به شبکه عصبی عمیق داده شده است. درکاربرد مشابه می‌توان ورودی را یک تصویر نیز درنظر گرفت.
-}
 \begin{figure}[ht]
 	\centerline{\includegraphics[width=0.7\textwidth]{neural_network_action}}
 	\caption{
-		\hl{
 		مثالی از یک چارچوب شبکه عصبی عمیق برای تشخیص نوع فعالیت
-		}
 		\cite{WinNT}
 	}
 	\label{fig:neural_network_action_first}
@@ -257,8 +251,6 @@
   با شبکه‌های عصبی عمیق می‌تواند توانایی مدل را در درک و تفسیر تصاویر افزایش دهد و دقت در تشخیص فعالیت‌های انسانی را بهبود بخشد.
 \end{itemize}
 \section{اهداف پژوهش}
-\hl{تصویرررررررررر}
-
 هدف این پایان نامه با درنظر گرفتن موارد گفته شده، تشخیص فعالیت انسان در تصویر می‌باشد که اطلاعات جانبی تصویر در روند تشخیص بکار گرفته می‌شود. این اطلاعات شامل اشیاء مرتبط با فعالیت، ژست انسان و موقعیت بدنی انسان که ناحیه کامل انسان را پوشش است.
 
 در بخش ابتدایی از یک شبکه استفاده می‌شود که ویژگی‌های موجود درتصویر را استخراج کند. این ویژگی‌ها در تعامل با مختصات اشیاء، مختصات ژست و مختصات موقعیت بدنی در یک شبکه ترنسفرمر ترکیب می‌شود که ویژگی‌های مرتبط بهتر مشخص شود. برای توصیف بهتر ژست از مسیر توصیف کننده زاویه بدن استفاده می‌شود که یک بردار توصیف کننده از زاویه اعضای بدن انسان است که یک بردار ویژگی از استخوان بندی بدن را نشان می‌دهد. این مسیر یک مسیر کمک کننده برای شبکه است که از ویژگی‌های نهفته ژست علاوه بر ویژگی‌های ظاهری نیز استفاده شود. هدف نهایی این است که ژست را به نوعی در تشخیص فعالیت دخالت دهیم.
@@ -269,7 +261,6 @@
 
 برخی مواقع نیز ممکن است مجموعه داده کافی دردسترس نباشد و شبکه با تکرار آموزش روی این مجموعه داده به سمت بیش برازش حرکت کند. درچنین حالتی استفاده از افزایش داده مقداری نتیجه را بهبود می‌دهد و همچنین باعث می‌شود شبکه تنوع تصاویر بیشتری به خود ببیند.
 \section{سوالات پژوهشی} 
-\hl{تصویرررررررررر}
 \begin{enumerate}
 	\item 
 	آیا استفاده از یک شبکه ترنسفرمر در تعامل با مسیر توصیف کننده برای ژست، می‌تواند با استفاده از مختصات ژست مدل مناسبی برای تشخیص فعالیت انسان باشد؟
