--- a/tex/chapter2.tex
+++ b/tex/chapter2.tex
@@ -318,7 +318,7 @@
  آماده استفاده کردند کمتر است.
 \section{جمع بندی فصل}
 
-روش های استفاده شده دراین فصل، وارد دسته کلی تشخیص فعالیت در تک تصویر شده است. دراین دسته، سه بخش اصلی موقعیت بدنی، ژست و اشیاء در تشخیص فعالیت نقش اساسی دارند که مقاله های معتبر مرتبط با این موارد بررسی شدند.
+دراین فصل روش‌های ارائه شده در حوزه تشخیص فعالیت که براساس تک تصویر عمل ‌می‌کنند مورد بررسی قرار گرفتند. در حوزه تشخیص فعالیت تک تصویر سه بخش اصلی موقعیت بدنی، ژست و اشیاء نقش مهمی برای مدل جهت شناخت فعالیت درحال انجام دارد که مقاله‌های معتبر مرتبط در این بخش بررسی شدند.
 
 مقالات مختلف زیادی دراین زمینه منتشر شده است که هرکدام به جنبه‌های از استفاده این بخش ها پرداختند با این حال دربعضی از این مقالات ژست و اشیاء نادیده گرفته شدند. در بعضی از مجموعه داده‌ها اشیاء نقش پررنگی در تشکیل آن فعالیت دارند. دراین نوع مجموعه داده‌ها مقالات مربوطه که اشیاء را نادیده می‌گیرند عملکرد به مراتب ضعیف‌تری داشته اند همچنین درمجموعه داده‌های دیگر ژست عامل اصلی شکل گیری آن فعالیت است و روش هایی که ژست را نادیده گرفته اند در این پیش بینی این فعالیت ها عملکرد ضعیفی داشتند.
 
