--- a/tex/chapter3.tex
+++ b/tex/chapter3.tex
@@ -14,8 +14,7 @@
 
 \begin{figure}[ht]
 	\centerline{\includegraphics[width=0.8\textwidth]{Flowchart_whole}}
-	\caption{
-	\hl{ساختار کلی شبکه پیشنهادی}
+	\caption{ساختار کلی شبکه پیشنهادی
 	}
 	\label{fig:Flowchart_whole}
 \end{figure}
@@ -50,9 +49,7 @@
 
 \begin{figure}[ht]
 	\centerline{\includegraphics[width=0.8\textwidth]{normalization_no_norm}}
-	\caption{\hl{
-		فرآیند یادگیری شبکه عصبی با داده نرمال شده (راست) و داده نرمال نشده (چپ)
-		}
+	\caption{فرآیند یادگیری شبکه عصبی با داده نرمال شده (راست) و داده نرمال نشده (چپ)
 	 \cite{Normal_not_Normal}
 	}
 	\label{fig:normalization_no_norm}
@@ -116,9 +113,10 @@ $\bullet$ \textbf{نرمال‌سازی دسته‌ای در ساختار شبک
 
  با توجه به محدودیت داده در بسیاری از حوزه‌ها، افزایش داده به عنوان رویکردی مؤثر در جلوگیری از بروز مشکلاتی مانند %
 \gls{Overfitting}
-  یا کم‌دادگانی به شمار می‌آید. این روش از طریق تولید نمونه‌های جدید از داده‌های موجود، مدل را به موارد مختلف و ناشناخته مواجه می‌کند و این امکان را فراهم می‌کند که مدل در شرایط مختلف عملکرد مناسبی از خود نشان دهد. افزایش داده به ویژه در مواردی که داده محدود است، کمک می‌کند تا مدل به طور کلی عملکرد بهتری داشته باشد. در ادامه، به بررسی مراحل و تکنیک‌های پرکاربرد در افزایش داده و نیز ارائه راهکارهایی برای اجرای بهینه این عملیات می‌پردازیم.\\
+  یا کم‌دادگانی به شمار می‌آید. این روش از طریق تولید نمونه‌های جدید از داده‌های موجود، مدل را به موارد مختلف و ناشناخته مواجه می‌کند و این امکان را فراهم می‌کند که مدل در شرایط مختلف عملکرد مناسبی از خود نشان دهد. افزایش داده به ویژه در مواردی که داده محدود است، کمک می‌کند تا مدل به طور کلی عملکرد بهتری داشته باشد. 
   
- \textbf{\hl{در فرآیند افزایش داده ملاحظات زیر درنظر گرفته می‌شود:}}
+  در ادامه، به بررسی یک‌سری ملاحظات درنظرگرفته شده در فرآیند افزایش داده و نیز ارائه راهکارهایی برای اجرای بهینه این عملیات می‌پردازیم.
+  
 \begin{itemize}
 	\item \textbf{تطبیق با خصوصیات مسئله:}
 	تکنیک‌های افزایش داده باید خصوصیات مسئله و نوع داده را درنظر بگیرند. مثلاً در تشخیص فعالیت‌ها، چرخش تصویر ممکن است برای تصاویر فعالیت انسانی مناسب‌تر باشد.
@@ -133,7 +131,7 @@ $\bullet$ \textbf{نرمال‌سازی دسته‌ای در ساختار شبک
 	استفاده از ترکیب چند تکنیک افزایش داده می‌تواند به تنوع بیشتر و بهبود قابلیت تعمیم مدل منجر شود.
 \end{itemize}
 
-چند نوع افزایش داده یا تغییرات داده انجام شده که درزیر به آنها اشاره می‌شود:
+در روش پیشنهادی از 4 نوع افزایش داده یا تغییرات داده استفاده شده است که درزیر به آنها اشاره می‌شود:
 
 \textbf{1. \gls{Rotation}}
 \textbf{:}
@@ -161,32 +159,34 @@ $\bullet$ \textbf{نرمال‌سازی دسته‌ای در ساختار شبک
  \ref{fig:no_album}
  و
 \ref{fig:with_album}
-نشان داده شده است.
-\begin{figure}[ht]
-	\centerline{\includegraphics[width=0.8\textwidth]{no_album}}
-	\caption{تصاویر بدون اعمال تغییرات}
-	\label{fig:no_album}
-\end{figure}
-\begin{figure}[ht]
-	\centerline{\includegraphics[width=0.8\textwidth]{with_album}}
-	\caption{تصاویر با اعمال چندین نوع تغییرات}
-	\label{fig:with_album}
+نشان داده شده است. 
+\begin{figure}
+	\centering
+	\subfloat[بدون اعمال تغییرات
+	]{\includegraphics[width=0.75\textwidth]{no_album}
+	\label{fig:no_album}}
+	\hfill
+	\subfloat[با اعمال تغییرات
+	]{\includegraphics[width=0.75\textwidth]{with_album}
+	\label{fig:with_album}}
+	\hfill
+	\caption{یک سری تصاویر با اعمال تغییرات و بدون اعمال تغییرات}
+	\label{fig:with_no_album}
 \end{figure}
 همانطور که مشخص است اندازه تمامی تصاویر به یک اندازه مشخص درآمده است و هدف از اینکه اندازه تمامی تصاویر یکسان است این است که شبکه نمی‌تواند اندازه‌های مختلف را اداره کند و نیاز است که اندازه تمامی تصاویر باهم برابر باشد. همچنین روی تمامی تصاویر چندین نوع تغییرات شامل چرخش، تغییر اندازه، انعکاس و تغییر رنگ با درصد احتمال‌های متفاوت اعمال شده است.البته اینطور نیست که اگر تصویری تغییر رنگ داشته دیگر چرخش نداشته باشد. ممکن است همه تغییرات اعمال شود یا برعکس هیچ تغییری نداشته باشد.
 
 \subsection{تخمین نقاط کلیدی بدن یا ژست}
-
 در زمینه تشخیص فعالیت انسان، تخمین نقاط کلیدی بدن اهمیت بیشتری پیدا می‌کند. این حوزه در بسیاری از کاربردها از جمله نظارت امنیتی، تحلیل حرکت، تشخیص بیماری‌های عضلانی، و حتی سیستم‌های واقعیت افزوده استفاده می‌شود. با توجه به تنوع و پیچیدگی فعالیت‌های انسانی، تخمین نقاط کلیدی بدن با دقت بالا و توانایی تعمیم به صحنه‌های گوناگون، یک چالش اساسی در این حوزه محسوب می‌شود.
 
 در یک تک تصویر، تخمین نقاط کلیدی بدن به دقت و کارآیی مطلوبی نیاز دارد. این کار با توجه به وجود چالش‌های نظیر تغییرات نوری، اختلافات در اندازه افراد، و تغییرات در زوایا و جهات دید، موقعیت نقاط کلیدی بدن انسان را مورد تخمین قرار می‌دهد. این اطلاعات می‌تواند برای تفسیر و تحلیل فعالیت انسان در یک فرآیند خاص یا شرایط محیطی مفید باشد.
 
 در این پایان نامه، از مدل YOLO%
 \LTRfootnote{You Only Look Once}
- برای تخمین نقاط کلیدی بدن از تصاویر در بخش ارتباط‌سنج استفاده شده است. YOLO یک مدل شناخته ‌شده در زمینه تشخیص اجسام است که به دلیل ساختار منحصر به فرد خود به سرعت و دقت بالا معروف است. نسخه‌های دیگری نیز از این شبکه وجود دارد که روی داده‌های انسان آموزش دیده و توانایی تخمین ژست و نقاط کلیدی بدن را دارد.
+ ورژن 8 برای تخمین نقاط کلیدی بدن از تصاویر در بخش ارتباط‌سنج استفاده شده است. YOLO یک مدل شناخته ‌شده در زمینه تشخیص اجسام است که به دلیل ساختار منحصر به فرد خود به سرعت و دقت بالا معروف است. نسخه‌های دیگری نیز از این شبکه وجود دارد که روی داده‌های انسان آموزش دیده و توانایی تخمین ژست و نقاط کلیدی بدن را دارد.
 
 استفاده از مدل YOLO نه تنها این امکان را فراهم می‌کند که به فرایند تشخیص فعالیت انسان در تصویر با سرعت انجام شود، بلکه به دلیل قابلیت تعمیم بالا، در مقابل تغییرات ناگهانی در محیط یا حرکات انسان از پایداری خوبی برخوردار است. انتخاب این مدل با توجه به نیازهای ساختار سبکه و تعامل آسان با آن، بهبود قابلیت‌ها و دقت در تخمین نقاط کلیدی بدن را فراهم می‌کند.
 
-البته YOLO روی برخی از تصاویر عملکرد ضعیفی دارد زیرا مختصات برخی از نقاط که دچار انسداد شده‌اند را کاملاً گم می‌کند. به همین جهت از مدل MMPose در بخش توصیف کننده زاویه بدن استفاده شده است. این مدل در بعضی از نقاط دارای انسداد، یک تخمین نسبتاً درستی از نقطه کلیدی می‌دهد. در بخش مسیرتوصیف کننده بدن دانستن مختصات تخمینی نقاط کلیدی بدن بسیار موثر است زیرا باید برداری طبق این‌ مختصات محاسبه شود و با دردست نداشتن این مختصات، حتی مختصات نزدیک به نقطه واقعی افت دقت ناشی خواهد شد.
+البته YOLO روی برخی از تصاویر عملکرد ضعیفی دارد زیرا مختصات برخی از نقاط که دچار انسداد شده‌اند را کاملاً گم می‌کند. به همین جهت از مدل MMPose ورژن 1.3.1 در بخش توصیف کننده زاویه بدن استفاده شده است. این مدل در بعضی از نقاط دارای انسداد، یک تخمین نسبتاً درستی از نقطه کلیدی می‌دهد. در بخش مسیرتوصیف کننده بدن دانستن مختصات تخمینی نقاط کلیدی بدن بسیار موثر است زیرا باید برداری طبق این‌ مختصات محاسبه شود و با دردست نداشتن این مختصات، حتی مختصات نزدیک به نقطه واقعی افت دقت ناشی خواهد شد.
 
 \gls{BoundingBox}
  یا مختصات ناحیه انسان و اشیاء به صورت پیش‌فرض دردسترس است. این مختصات کمک کرده تا بتوان ناحیه شخص را از تصویر و پس زمینه جدا کرد و به صورت جداگانه به مدل تخمین ژست داد تا این نقاط کلیدی را تخمین بزند. تصویر %
@@ -247,13 +247,9 @@ $\bullet$ \textbf{نرمال‌سازی دسته‌ای در ساختار شبک
 شاید سوال باشد که در تصویر %
 \ref{fig:keypoint_boxes2}
  ناحیه "سر" انتخاب شده ولی این ناحیه به جای ناحیه پا که دچار اسنداد شده به صورت جایگزین انتخاب شده است، زیرا همانطور که گفتیم یک ناحیه از انسان به صورت شانسی انتخاب خواهد شد و دراینجا سر انتخاب شده است
- 
  \subsection{تعامل ژست در مکانیزم توجه}
-
 مکانیزم توجه امکان اختصاص وزن‌های مختلف به نقاط مختلف تصویر را فراهم کرده و به شبکه‌های عصبی اجازه می‌دهد تا به نقاط مهم و حیاتی تصویر با دقت بیشتری توجه کنند. طبق این موضوع، شبکه سعی می‌‌کند ارتباط بین انسان و اشیاء که در فعالیت دخیل هستند پیدا کند. دربیشتر روش‌های تشخیص فعالیت انسان، ژست کمترین اهمیت را داشته و اصولاً این ویژگی مهم را درنظر گرفته نشده است. 
- 
  \subsection{بخش اول: مسیر توصیف کننده زاویه بدن }
- 
  در این بخش با استفاده از توصیف کننده زاویه بدن،‌ یک برداری بدست می‌آید که خاصیت کامل ژست انسان را توصیف می‌کند. این بردار درترکیب با خروجی بخش ارتباط‌سنج انسان و اشیاء، جهت امتیاز‌دهی و کلاس بندی استفاده می‌شود.
  
  توصیف کننده زاویه بدن، یک اسکلت از ساختار بدن انسان را تشکیل می‌دهد و اطلاعات جامع از بدن انسان استخراج می‌کند. این کار ویژگی‌های مفهومی %
@@ -306,8 +302,7 @@ $\bullet$ \textbf{نرمال‌سازی دسته‌ای در ساختار شبک
   	\label{eq:angle_bet_limb}
   	a_{l_1, l_2}=\mathbf{v}_{l_1}^T \cdot \mathbf{v}_{l_2}
   \end{equation}
- \hl{ در این فرمول ضرب داخلی جفت بردارهای عضو بدن محاسبه شده است، ازاین‌رو از ترکیب جفت تمامی}
-  13 نقطه کلیدی باهم یک بردار به طول 78 تولید شده است (%
+ در این فرمول ضرب داخلی جفت بردارهای عضو بدن محاسبه شده است، ازاین‌رو از ترکیب جفت تمامی 13 نقطه کلیدی باهم یک بردار به طول 78 تولید شده است (%
   $C_{13}^2=78$
   ). از روی این بردار یک بردار عضو بدن بهینه محاسبه شده است که از ترکیب جفت تمامی 78 تایی بردار با یکدیگر است که درنهایت باعث ساخت یک بردار ویژگی توصیف کننده بدن بهینه به طول 3003 شده است که ویژگی‌های بیشتر و بهینه‌تری از ژست را توصیف می‌کند(
     $C_{78}^2=3003$
@@ -330,9 +325,7 @@ $\bullet$ \textbf{نرمال‌سازی دسته‌ای در ساختار شبک
  ساختار ماژول ارتباط‌سنج را نشان می‌دهد که ترکیب ویژگی‌های انسان با ژست و انسان با اشیاء را انجام می‌دهد. 
   \begin{figure}[ht]
  	\centerline{\includegraphics[width=0.7\textwidth]{majule}}
- 	\caption{
- 	\hl{جزییات ساختار ماژول ارتباط‌سنج}
- 	}
+ 	\caption{جزییات ساختار ماژول ارتباط‌سنج}
  	\label{fig:majule}
  \end{figure}
  
@@ -407,14 +400,12 @@ $\bullet$ \textbf{نرمال‌سازی دسته‌ای در ساختار شبک
    یک ساختار کلی‌تری از نحوه تشکیل شبکه در داخل بخش ارتباط‌سنج را نشان می‌دهد. 
      \begin{figure}[ht]
    	\centerline{\includegraphics[width=0.95\textwidth]{joziyat_bishtar}}
-   	\caption{
-   		\hl{نگاه کلی‌تر به ساختار بخش ارتباط‌سنج}
-   	}
+   	\caption{نگاه کلی‌تر به ساختار بخش ارتباط‌سنج}
    	\label{fig:joziyat_bishtar}
    \end{figure}
 ابتدا تصویر وارد شبکه ResNet می‌شود که استخراج ویژگی‌ کلی از تصویر انجام گیرد. سپس از یک بخش %
 \lr{RoI Align}
- می‌گذرد که ویژگی‌های ناحیه خاص از تصویر استخراج شود. در مسیر اول ویژگی‌های تصویر با کمک مختصات موقعیت بدنی انسان، خروجی مختص به بخشی از تصویر که انسان درآن حضور دارد را ‌می‌دهد. همینطور در مسیر پایین، خروجی‌ها بادرنظرگرفتن ناحیه اشیاء یا ژست تولید خواهد شد. سپس از یک GAP%
+ می‌گذرد که ویژگی‌های ناحیه خاص از تصویر استخراج شود. در مسیر اول ویژگی‌های تصویر با کمک مختصات موقعیت بدنی انسان، خروجی مختص به بخشی از تصویر که انسان درآن حضور دارد را ‌می‌دهد. همینطور در مسیر دوم، خروجی‌ها بادرنظرگرفتن ناحیه اشیاء یا ژست تولید خواهد شد. سپس از یک GAP%
  \LTRfootnote{Global Average Pooling}
  رد می‌شود که ویژگی‌ها یک مقدار فشرده‌تر شود. درنهایت از یک لایه FC%
  \LTRfootnote{Fully Connected}
