--- a/tex/chapter4.tex
+++ b/tex/chapter4.tex
@@ -180,7 +180,7 @@
   	\caption{ماتریس درهم ریختگی روش توصیف کننده زاویه بدن روی \lr{Stanford40}}
   	\label{fig: confution_matrix_std40_lad}
   \end{figure}
-  همانطور که در شکل مشخص است، بیشتری دسته بندی نادرست مربوط به فعالیت "آشپزی کردن" است که 21 تصویر از فعالیت "شستن ظرف" را به اشتباه فعالیت "آشپزی کردن" پیش بینی کرده است. این نشان می‌دهد که فعالیت های "آشپزی کردن" و "شستن ظرف" جزء سخت ترین فعالیت‌ ها در این مجموعه داده است.
+  همانطور که در شکل مشخص است،  فعالیت "آشپزی کردن" و "شستن ظرف" جزء فعالیت‌هایی هستند که بیشترین خطای پیش‌بینی اشتباه بین دو کلاس را داشتند. یعنی مدل، پیش‌بینی این دو فعالیت را باهم اشتباه گرفته است.  فعالیت "آشپزی کردن" 21 تصویر از فعالیت "شستن ظرف" را به اشتباه فعالیت "آشپزی کردن" پیش بینی کرده است. این نشان می‌دهد که فعالیت های "آشپزی کردن" و "شستن ظرف" جزء سخت ترین فعالیت‌ ها در این مجموعه داده است.
 دو فعالیت "اسب سواری" و "ویالون زدن" جز دوتا فعالیتی هستند که کمترین خطا را داشتند و هر دو مدل به درستی توانسته‌‌اند این دو را دسته بندی کنند.
  \begin{table}[h!]
 	\centering
@@ -316,21 +316,21 @@
  از پیش‌بینی مدل در بخش ارتباط‌سنج نشان داده شده است. ناحیه سبز رنگ، ناحیه برجسته اشیاء و ناحیه آبی رنگ ناحیه برجسته اجزاء بدن را نشان می‌دهد.
    \begin{figure}
  	\centering
- 	\subfloat[ ]{\includegraphics[width=0.24\textwidth]{res_playing}}
+ 	\subfloat{}{\includegraphics[width=0.24\textwidth]{res_playing}}
  	\hfill
- 	\subfloat[ ]{\includegraphics[width=0.24\textwidth]{res_reading}}
+ 	\subfloat{}{\includegraphics[width=0.24\textwidth]{res_reading}}
  	\hfill
- 	\subfloat[ ]{\includegraphics[width=0.24\textwidth]{res_washing_dishes}}
+ 	\subfloat{}{\includegraphics[width=0.24\textwidth]{res_washing_dishes}}
  	\hfill
- 	\subfloat[ ]{\includegraphics[width=0.24\textwidth]{res_drinking}}
+ 	\subfloat{\includegraphics[width=0.24\textwidth]{res_drinking}}
  	\\
- 	\subfloat[ ]{\includegraphics[width=0.24\textwidth]{res_computer}}
+ 	\subfloat{\includegraphics[width=0.24\textwidth]{res_computer}}
  	\hfill
- 	\subfloat[ ]{\includegraphics[width=0.24\textwidth]{res_phone_calling}}
+ 	\subfloat{\includegraphics[width=0.24\textwidth]{res_phone_calling}}
  	\hfill
- 	\subfloat[ ]{\includegraphics[width=0.24\textwidth]{res_fixing_car}}
+ 	\subfloat{\includegraphics[width=0.24\textwidth]{res_fixing_car}}
  	\hfill
- 	\subfloat[ ]{\includegraphics[width=0.24\textwidth]{res_gayeg_savari}}
+ 	\subfloat{\includegraphics[width=0.24\textwidth]{res_gayeg_savari}}
  	\hfill
  	\caption{تصاویر %
  		\gls{BoundingBox}
