--- a/tex/chapter5.tex
+++ b/tex/chapter5.tex
@@ -4,6 +4,19 @@
 \section{مقدمه}
 تشخیص فعالیت انسان در تک تصویر به عنوان یکی از حوزه‌های پررنگ و مهم در زمینه هوش مصنوعی و بینایی ماشین مطرح است. این حوزه تحقیقاتی به تحلیل و تفسیر عملکرد انسان در محیط‌های مختلف و در زمان واقعی می‌پردازد. از آنجایی که فعالیت‌های انسانی حاصل ترکیبی پیچیده از حرکات بدنی و ارتباطات انسانی است، تشخیص این فعالیت‌ها در تک تصویر یک چالش فنی و معمولاً پیچیده است.
 
+با توجه به پیچیدگی رفتار‌های انسانی،‌ تشخیص فعالیت انسان در تک تصویر می‌تواند در تشخیص الگو‌های رفتاری،‌ عادات و وضعیت‌های روانی افراد کمک کننده باشد. همچنین با پیشرفت تکنولوژی و توسعه روش‌های هوش مصنوعی و بینایی ماشین، امکانات بهتری برای تشخیص و تحلیل فعالیت‌های انسان در تک تصویر ایجاد شده است که این موضوع می‌تواند به توسعه کاربرد‌های جدید  و بهبود کارایی ماشین‌ها در تعامل با محیط کمک کنند. با توجه به این دلایل، تحقیقات در زمینه تشخیص فعالیت انسان در تک تصویر ارزشمند و حیاتی به نظر می‌رسد که می‌تواند به توسعه‌ی دانش و فناوری‌های مرتبط و بهبود شرایط زندگی انسان کمک کنند.
+
+دراین پایان نامه از مکانیزم توجه که بخش مهمی از شبکه ترنسفرمر را شامل می‌شود، در کاربرد ارتباط‌سنج استفاده شد. از این شبکه در تعامل با مسیر توصیف کننده برای ژست استفاده شد که در این مسیر توصیف کننده ژست، مختصات ژست و ویژگی‌های استخراج شده از تصویر با هم ترکیب شدند و یک بردار ویژگی بهینه جهت تشخیص فعالیت ایجاد کردند. با درنظر گرفتن این مسیر نتیجه روی مجموعه داده %
+\lr{VOC 2012}
+دقت %
+\lr{92.33\%}
+را نشان داد که در حالتی که این مسیر درنظر گرفته نمی‌شود نزدیک %
+\lr{4.4}
+درصد بهتر عمل کرد که نشان می‌دهد استفاده از ژست انسان موجب بهتر شدن دقت تشخیص فعالیت می‌شود.
+
+طبق نتایج بدست آمده مدل بیشتر از نقاط کلیدی ناحیه‌ی "دست" استفاده کرده است. البته بستگی به فعالیت دارد اما با این حال نمونه هایی که بررسی شد نشان می‌داد که ناحیه‌ی در ارتباط با اشیاء بیشترین تاثیر را در تشخیص فعالیت دارد. 
+همچنین وجود ناحیه اشیاء نیز مهم است چون در یک شبکه ارتباط‌سنج ارتبط بین اشیاء و موقعیت بدنی انسان ایجاد شد که ترکیب این خروجی با معنادار با ژست توانسته به ناحیه‌ی مهم در ارتباط با اشیاء اشاره کند.
+
 \section{پیشنهادات برای کارهای آتی}
 برای استخراج ویژگی تصویر اغلب از ResNet استفاده می‌شود که برای نشان دادن شرایط یکسان است. درحالی که با پیشرفت روش های استخراج ویژگی و مدل های پیشرفته می‌توان از روش‌های به روزتری نیز استفاده کرد.
 
