--- a/tex/enTitle.tex
+++ b/tex/enTitle.tex
@@ -18,5 +18,8 @@
 \latinkeywords{
 Human Action Recognition in Still Image, Deep Learning, Attention Mechanism, Pose Estimation, Object Detection}
 \en-abstract{
-Due to the lack of temporal information in a still image, utilizing conventional video processing methods for human action recognition is not feasible, posing numerous challenges. To address the absence of temporal information, focusing on the peripheral information in the image and background proves effective. Extracting information such as human appearance, gestures, and objects related to humans can be achieved from a still image. The physical appearance of humans, poses, and human-related objects contain crucial information about human activities. Nowadays, deep neural networks are commonly employed for extracting these features. Another network, known as Transformer, initially used in text processing applications, is now extensively applied in computer vision and can be beneficial in our context. In this thesis, using Deep Neural Networks, essential image features are first extracted. Subsequently, these features are combined using a Transformer network to establish a relational understanding. The relationship between humans and poses, as well as the relationship between humans and relevant objects, is identified. The network then estimates actions based on the established relational information. The VOC and Stanford40 datasets in the field of human action recognition are utilized for evaluating the model's performance and network training.
+The identification and recognition of human activities from a single image pose significant challenges due to the absence of temporal information. Conventional video processing methods are ineffective in this context. To address these challenges, we propose a novel image-based Human Action Recognition (HAR) method that utilizes both Deep Neural Networks (DNNs) and Transformers. Our method effectively compensates for the lack of temporal information by focusing on the image's auxiliary and contextual information.
+From a single image, information such as human appearance, pose and objects related to humans can be extracted. These pieces of information encompass crucial details of human actions and deep neural networks are commonly employed today to extract these features. Additionally, another network called Transformer, initially used in text processing applications, is now widely utilized in the field of computer vision and has also proven to be beneficial in human action recognition. 
+In this thesis, utilizing deep neural networks, significant image features are first extracted. Subsequently, these features are combined using the Attention Mechanisms to establish a relational understanding. The relationship between humans and their actions, as well as the relationship between humans and related objects, is identified, and the network estimates activities based on these relational findings.
+To combine human pose, a Limb Angle Descriptor (LAD) is used to extract pose features. Two datasets, VOC 2012 and Stanford40, in the domain of human activity, are utilized to evaluate the model's performance and train the network. The proposed model, combining the Limb Angle Descriptor with the output of the relational reasoning module, achieves an accuracy of 92.33\% on the VOC 2012 dataset.
 }
