--- a/tex/faTitle.tex
+++ b/tex/faTitle.tex
@@ -70,11 +70,17 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %چکیده پایان‌نامه را وارد کنید
 \fa-abstract{
-به دلیل عدم وجود اطلاعات زمانی در تک تصویر، استفاده از روشهای متداول پردازش ویدیو برای شناسایی و تشخیص نوع فعالیت انسانی امکان پذیر نمی‌باشد و در نتیجه تشخیص این اطلاعات در تک تصویر با چالشهای فراوانی روبرو است. برای جبران عدم وجود اطلاعات زمانی،تمرکز روی اطلاعات جانبی تصویر و پس‌زمینه کارآمد است. از تک تصویر میتوان اطلاعاتی ازجمله شکل ظاهری انسان، ژست و اشیاء مرتبط با انسان را استخراج کرد. شکل ظاهری انسان، ژست و اشیاء مرتبط با انسان شامل اطلاعات مهمی از فعالیت انسان است، امروزه جهت استخراج این ویژگی‌ها از شبکه های عصبی عمیق  استفاده می‌شود. همچنین شبکه دیگری به نام ترنسفرمر  مطرح است که درابتدا درکاربرد پردازش متن استفاده می‌شد ولی امروزه در زمینه بینایی کامپیوتر  نیز بسیار مورد استفاده قرارمی‌گیرد و درحوزه تشخیص فعالیت انسان نیز می‌تواند سودمند باشد. دراین پایان نامه با استفاده از شبکه‌های عصبی عمیق،  ابتدا ویژگی‌های مهم تصویر استخراج می‌شود، سپس این ویژگی‌ها به کمک شبکه ترنسفرمر با یکدیگر ترکیب شده تا یک ارتباط‌سنجی انجام شود و رابطه بین انسان و ژست، و همچنین رابطه انسان و اشیاء مرتبط مشخص شود و شبکه نسبت به این نتایج ارتباط‌سنجی شده، فعالیت را تخمین بزند. دو مجموعه داده voc و 
-\lr{stanford40}
- در زمینه فعالیت انسان برای ارزیابی کارایی مدل و آموزش شبکه مورد استفاده قرار می‌گیرد.
+به دلیل عدم وجود اطلاعات زمانی در تک تصویر، استفاده از روشهای متداول پردازش ویدیو برای شناسایی و تشخیص نوع فعالیت انسانی امکان پذیر نمی‌باشد و در نتیجه تشخیص این اطلاعات در تک تصویر با چالشهای فراوانی روبرو است. برای جبران عدم وجود اطلاعات زمانی،تمرکز روی اطلاعات جانبی تصویر و پس‌زمینه کارآمد است. از تک تصویر می‌توان اطلاعاتی ازجمله شکل ظاهری انسان، ژست و اشیاء مرتبط با انسان را استخراج کرد. شکل ظاهری انسان، ژست و اشیاء مرتبط با انسان شامل اطلاعات مهمی از فعالیت انسان است، امروزه جهت استخراج این ویژگی‌ها از شبکه های عصبی عمیق  استفاده می‌شود. همچنین شبکه دیگری به نام ترنسفرمر  مطرح است که درابتدا درکاربرد پردازش متن استفاده می‌شد ولی امروزه در زمینه بینایی کامپیوتر  نیز بسیار مورد استفاده قرارمی‌گیرد و درحوزه تشخیص فعالیت انسان نیز سودمند بوده است. دراین پایان نامه با استفاده از شبکه‌های عصبی عمیق،  ابتدا ویژگی‌های مهم تصویر استخراج می‌شود، سپس این ویژگی‌ها به کمک شبکه ترنسفرمر با یکدیگر ترکیب شده تا یک ارتباط‌سنجی انجام شود و رابطه بین انسان و ژست، و همچنین رابطه انسان و اشیاء مرتبط مشخص شود و شبکه نسبت به این نتایج ارتباط‌سنجی شده، فعالیت را تخمین بزند. برای ترکیب ژست با انسان از توصیف کننده زاویه بدن جهت استخراج ویژگی ژست استفاده شده است. دو مجموعه داده %
+\lr{VOC‌ 2012}
+ و 
+\lr{Stanford40}
+ در زمینه فعالیت انسان برای ارزیابی کارایی مدل و آموزش شبکه مورد استفاده قرار می‌گیرد. نتیجه مدل  پیشنهادی توصیف کننده زاویه بدن در ترکیب با خروجی بخش ارتباط‌سنج روی مجموعه داده %
+\lr{VOC‌ 2012}
+ دقت %
+ \lr{92.33\%}
+را بدست آورده است.
 }
 % کلمات کلیدی پایان‌نامه را وارد کنید
-\keywords{تشخیص فعالیت انسان در تک تصویر، یادگیری عمیق، شبکه ترنسفرمر، تخمین ژست، شناسایی اشیاء}
+\keywords{تشخیص فعالیت انسان در تک تصویر، یادگیری عمیق، مکانیزم توجه، تخمین ژست، شناسایی اشیاء}
 % انتهای وارد کردن فیلد‌ها
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
