--- a/tex/MyReferences.bib
+++ b/tex/MyReferences.bib
@@ -40,7 +40,7 @@
 }
 @misc{Normal_not_Normal,
   title = {Link of Web Page},
-  howpublished = {\url{https://towardsdatascience.com/how-to-calculate-the-mean-and-standard-deviation-normalizing-datasets-in-pytorch-704bd7d05f4c
+  howpublished = {\url{https://shorturl.at/fzBR2
 }}
 }
 @misc{WinNT,
