--- a/tex/chapter1.tex
+++ b/tex/chapter1.tex
@@ -181,7 +181,9 @@
 \LTRfootnote{Convolutional Neural Networks (CNN)}
 اغلب در این کاربرد به دلیل استخراج ویژگی‌های متفاوت در سطوح مختلف، مورد استفاده قرار می‌گیرد. 
 
-	\item \textbf{آموزش با مجموعه داده متنوع:}\\
+	\item \textbf{آموزش با %
+		\gls{Dataset}
+		 متنوع:}\\
 آموزش شبکه‌های عصبی عمیق با استفاده از مجموعه داده‌های متنوع و جامع از تصاویر مختلف، از جمله فعالیت‌های انسانی در شرایط مختلف، اطمینان از عملکرد مدل در شرایط واقعی را افزایش می‌دهد.
 
 \item \textbf{قابلیت یادگیری از داده‌های پیچیده:}\\
@@ -220,7 +222,7 @@
 	\label{fig:mainfigure}
 \end{figure}
 
-\subsection{بهره‌مندی از معماری \gls{Self-Attention}}
+\subsection{بهره‌مندی از معماری توجه به خود}
 
 از مکانیزم %
 \gls{Self-Attention}
@@ -253,13 +255,23 @@
 \section{اهداف پژوهش}
 هدف این پایان نامه با درنظر گرفتن موارد گفته شده، تشخیص فعالیت انسان در تصویر می‌باشد که اطلاعات جانبی تصویر در روند تشخیص بکار گرفته می‌شود. این اطلاعات شامل اشیاء مرتبط با فعالیت، ژست انسان و موقعیت بدنی انسان که ناحیه کامل انسان را پوشش است.
 
-در بخش ابتدایی از یک شبکه استفاده می‌شود که ویژگی‌های موجود درتصویر را استخراج کند. این ویژگی‌ها در تعامل با مختصات اشیاء، مختصات ژست و مختصات موقعیت بدنی در یک شبکه ترنسفرمر ترکیب می‌شود که ویژگی‌های مرتبط بهتر مشخص شود. برای توصیف بهتر ژست از مسیر توصیف کننده زاویه بدن استفاده می‌شود که یک بردار توصیف کننده از زاویه اعضای بدن انسان است که یک بردار ویژگی از استخوان بندی بدن را نشان می‌دهد. این مسیر یک مسیر کمک کننده برای شبکه است که از ویژگی‌های نهفته ژست علاوه بر ویژگی‌های ظاهری نیز استفاده شود. هدف نهایی این است که ژست را به نوعی در تشخیص فعالیت دخالت دهیم.
+در بخش ابتدایی از یک شبکه استفاده می‌شود که ویژگی‌های موجود درتصویر را استخراج کند. این ویژگی‌ها در تعامل با مختصات اشیاء، مختصات ژست و مختصات موقعیت بدنی در یک شبکه ترنسفرمر ترکیب می‌شود که ویژگی‌های مرتبط بهتر مشخص شود. برای توصیف بهتر ژست از مسیر%
+\gls{LimbAngleDescriptor}
+ استفاده می‌شود که یک بردار توصیف کننده از زاویه اعضای بدن انسان است که یک بردار ویژگی از استخوان بندی%
+ \gls{Skeleton}
+  بدن را نشان می‌دهد. این مسیر یک مسیر کمک کننده برای شبکه است که از ویژگی‌های نهفته ژست علاوه بر ویژگی‌های ظاهری نیز استفاده شود. هدف نهایی این است که ژست را به نوعی در تشخیص فعالیت دخالت دهیم.
 
-درنهایت مرتبط‌ترین شیء و مرتبط‌ترین ناحیه بدن از ژست انتخاب می‌شود و با خروجی موقعیت بدنی ترکیب می‌شود و یک تشخیص از فعالیت درحال انجام صورت می‌گیرد. پس ورودی شبکه یک تک تصویر و خروجی نهایی یک بردار به طول تعداد دسته‌های موجود در هر مجموعه داده می‌باشد و بسته به تعداد دسته‌بندی‌های مجموعه داده تغییر خواهد کرد. 
+درنهایت مرتبط‌ترین شیء و مرتبط‌ترین ناحیه بدن از ژست انتخاب می‌شود و با خروجی موقعیت بدنی ترکیب می‌شود و یک تشخیص از فعالیت درحال انجام صورت می‌گیرد. پس ورودی شبکه یک تک تصویر و خروجی نهایی یک بردار به طول تعداد دسته‌های موجود در هر مجموعه ‌داده می‌باشد و بسته به تعداد دسته‌بندی‌های مجموعه داده تغییر خواهد کرد. 
 
-ممکن است در برخی از تصاویر کل بدن انسان مشخص نباشد و اصطلاحاً انسداد رخ دهد که کار تشخیص اعضای بدن انسان را برای تشخیص ژست مشکل می‌کند. برای غلبه براین چالش از ناحیه‌های در دسترس انسان استفاده می‌شود که شبکه ورودی بدون مقدار نداشته نباشد که باعث گمراهی شبکه حین آموزش شود. همچنین شرایط نوری در هرتصویر متفاوت است و ممکن است ناحیه انسان به طور واضح قابل دیدن نباشد، بنابراین یک سری پیش پردازش ها جهت بهبود تصویر انجام می‌شود.
+ممکن است در برخی از تصاویر کل بدن انسان مشخص نباشد و اصطلاحاً %
+\gls{Occlusion}
+ رخ دهد که کار تشخیص اعضای بدن انسان را برای تشخیص ژست مشکل می‌کند. برای غلبه براین چالش از ناحیه‌های در دسترس انسان استفاده می‌شود که شبکه ورودی بدون مقدار نداشته نباشد که باعث گمراهی شبکه حین آموزش شود. همچنین شرایط نوری در هرتصویر متفاوت است و ممکن است ناحیه انسان به طور واضح قابل دیدن نباشد، بنابراین یک سری پیش پردازش ها جهت بهبود تصویر انجام می‌شود.
 
-برخی مواقع نیز ممکن است مجموعه داده کافی دردسترس نباشد و شبکه با تکرار آموزش روی این مجموعه داده به سمت بیش برازش حرکت کند. درچنین حالتی استفاده از افزایش داده مقداری نتیجه را بهبود می‌دهد و همچنین باعث می‌شود شبکه تنوع تصاویر بیشتری به خود ببیند.
+برخی مواقع نیز ممکن است مجموعه داده کافی دردسترس نباشد و شبکه با تکرار آموزش روی این مجموعه داده به سمت %
+\gls{Overfitting}
+ حرکت کند. درچنین حالتی استفاده از افزایش داده%
+ \gls{DataAugmentation}
+  مقداری نتیجه را بهبود می‌دهد و همچنین باعث می‌شود شبکه تنوع تصاویر بیشتری به خود ببیند.
 \section{سوالات پژوهشی} 
 \begin{enumerate}
 	\item 
