--- a/tex/chapter3.tex
+++ b/tex/chapter3.tex
@@ -236,9 +236,7 @@ $\bullet$ \textbf{نرمال‌سازی دسته‌ای در ساختار شبک
 	\subfloat[ ]{\includegraphics[width=0.28\textwidth]{keypoint_boxes2}\label{fig:keypoint_boxes2}}
 	\hfill
 	\subfloat[ ]{\includegraphics[width=0.22\textwidth]{keypoint_boxes3}\label{fig:keypoint_boxes3}}
-	\caption{تصاویر 
-		\gls{BoundingBox}
-		 ژست بدست آمده از نقاط کلیدی}
+	\caption{تصاویر ناحیه احاطه کننده ژست بدست آمده از نقاط کلیدی}
 	\label{fig:keypoint_boxes}
 \end{figure}
 
